third_party/move/move-compiler-v2/tests/lambda/storable/registry_ok.exp

Diagnostics:
error: unsupported language construct
  ┌─ tests/lambda/storable/registry_ok.move:6:36
  │
6 │     struct FunctionValue(|u64| u64 with store+copy) has store, copy, drop;
  │                                    ^^^^^^^^^^^^^^^ Move 2.2 language construct is not enabled: Ability constraints on function types

error: unsupported language construct
   ┌─ tests/lambda/storable/registry_ok.move:32:84
   │
32 │     fun replace_or_add_function(v: &mut vector<Function>, k: u64, new_f: |u64| u64 with store+copy): Option<|u64| u64 with store+copy> {
   │                                                                                    ^^^^^^^^^^^^^^^ Move 2.2 language construct is not enabled: Ability constraints on function types

error: unsupported language construct
   ┌─ tests/lambda/storable/registry_ok.move:32:119
   │
32 │     fun replace_or_add_function(v: &mut vector<Function>, k: u64, new_f: |u64| u64 with store+copy): Option<|u64| u64 with store+copy> {
   │                                                                                                                       ^^^^^^^^^^^^^^^ Move 2.2 language construct is not enabled: Ability constraints on function types

error: unsupported language construct
   ┌─ tests/lambda/storable/registry_ok.move:56:47
   │
56 │     fun register(owner: &signer, f: |u64| u64 with store+copy, k: u64) acquires Registry {
   │                                               ^^^^^^^^^^^^^^^ Move 2.2 language construct is not enabled: Ability constraints on function types

error: unsupported language construct
    ┌─ tests/lambda/storable/registry_ok.move:110:23
    │
110 │         FunctionValue(move |y| multiply(x, y))
    │                       ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression

error: unsupported language construct
    ┌─ tests/lambda/storable/registry_ok.move:114:23
    │
114 │         FunctionValue(move |y| multiply(x, y))
    │                       ^^^^ Move 2.2 language construct is not enabled: Modifier on lambda expression
